# cs-framework

./: AGENTS.md  MANIFEST.in  README.ja.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/agents/: copilot-instructions.md
.github/workflows/: pypi-publish.yml
docs/: specification.md
specs/001-cs-framework-python/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cs-framework-python/checklists/: requirements.md
src/cs_framework/: cli.py
src/cs_framework/engine/: runner.py
src/cs_framework/logging/: logger.py  ontology.py
src/cs_framework/skills/architect/: SKILL.md
src/cs_framework/skills/debugger/: SKILL.md
src/cs_framework/skills/dev/: SKILL.md
src/cs_framework/skills/fuzzer/: SKILL.md
src/cs_framework/skills/linter/: SKILL.md
src/cs_gui/: graph_loader.py  main.py
src/examples/agent_demo/: main.py
src/examples/distributed_demo/: main.py
src/examples/pacman/: play.py  run.py  scenario_bug_repro.yaml  scenario_test.yaml
src/examples/roguelike/: ai_player.py  hybrid_control.py  main.py  rdf_control_demo.py  run.py  view_scene.py  virtual_input.py
src/examples/shadow_demo/: main.py
src/examples/simple_demo/: concepts.py  main.py
src/examples/tetris/: concepts.py  interactive.py  main.py
tests/: fuzzer_scenario.yaml  fuzzer_setup.py  sync_v1.yaml  sync_v2.yaml  test_hot_swap.py  test_invariant.py  test_pydantic_support.py  test_time_travel.py  test_yaml_loader.py
tests/integration/: test_sync_flow.py
tests/unit/: test_concept.py  test_logging.py
(+18 files in other folders)
