[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs-framework"
version = "0.1.3"
description = "A Python framework implementing the Concept-Synchronization Constitution"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "shuntacurosu", email = "shuntacurosu@users.noreply.github.com"},
]
dependencies = [
    "rdflib>=7.0.0",
    "nicegui>=1.4.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "networkx>=3.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/shuntacurosu/cs-framework"
Repository = "https://github.com/shuntacurosu/cs-framework"
Issues = "https://github.com/shuntacurosu/cs-framework/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
csfw = "cs_framework.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
